--- a/python/problem_001.ipynb
+++ b/python/problem_001.ipynb
@@ -10,6 +10,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "619e624f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import euler"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "320004e9",
    "metadata": {},
@@ -19,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "9ddd8fcc",
    "metadata": {},
    "outputs": [],
@@ -34,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "eaf60461",
    "metadata": {},
    "outputs": [
@@ -44,7 +54,7 @@
        "233168"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -55,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "d5fbbc6e",
    "metadata": {},
    "outputs": [
@@ -63,12 +73,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "43.8 μs ± 323 ns per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n"
+      "45.7 μs ± 468 ns per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n"
      ]
     }
    ],
    "source": [
-    "%timeit multiples()"
+    "t = %timeit -o multiples()\n",
+    "euler.save_benchmark(1, t)"
    ]
   },
   {
@@ -81,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "ea9a7c99",
    "metadata": {},
    "outputs": [
@@ -91,7 +102,7 @@
        "233168"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -102,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "87b48ae7",
    "metadata": {},
    "outputs": [
@@ -110,12 +121,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "42.8 μs ± 318 ns per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n"
+      "42.7 μs ± 215 ns per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n"
      ]
     }
    ],
    "source": [
-    "%timeit sum([i for i in range(1000) if (i%3 == 0) or (i%5 == 0)])"
+    "t = %timeit -o sum([i for i in range(1000) if (i%3 == 0) or (i%5 == 0)])\n",
+    "euler.save_benchmark(1, t)"
    ]
   },
   {
@@ -128,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "47dceda5",
    "metadata": {},
    "outputs": [
@@ -138,7 +150,7 @@
        "233168"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -149,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "6c4767ad",
    "metadata": {},
    "outputs": [
@@ -157,12 +169,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "12.8 μs ± 207 ns per loop (mean ± std. dev. of 7 runs, 100,000 loops each)\n"
+      "12.8 μs ± 36.3 ns per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n"
      ]
     }
    ],
    "source": [
-    "%timeit sum(set(range(0, 1000, 3)).union(set(range(0, 1000, 5))))"
+    "t = %timeit -o sum(set(range(0, 1000, 3)).union(set(range(0, 1000, 5))))\n",
+    "euler.save_benchmark(1, t)"
    ]
   }
  ],
