--- a/python/problem_002.ipynb
+++ b/python/problem_002.ipynb
@@ -10,6 +10,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "9d520d08",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import euler"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "123e83b0",
    "metadata": {},
@@ -19,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "id": "85bacd8b",
    "metadata": {},
    "outputs": [],
@@ -36,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "id": "2c58e650",
    "metadata": {},
    "outputs": [
@@ -46,7 +56,7 @@
        "4613732"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -57,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "id": "537d6654",
    "metadata": {},
    "outputs": [
@@ -65,12 +75,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6.4 μs ± 284 ns per loop (mean ± std. dev. of 7 runs, 100,000 loops each)\n"
+      "6.35 μs ± 22.2 ns per loop (mean ± std. dev. of 7 runs, 100,000 loops each)\n"
      ]
     }
    ],
    "source": [
-    "%timeit fibonacci()"
+    "t = %timeit -o fibonacci()\n",
+    "euler.save_benchmark(2, t)"
    ]
   },
   {
@@ -83,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "id": "900aece2",
    "metadata": {},
    "outputs": [],
@@ -105,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "id": "a6e33a27",
    "metadata": {},
    "outputs": [
@@ -115,7 +126,7 @@
        "4613732"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -126,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "id": "5f18005e",
    "metadata": {},
    "outputs": [
@@ -134,12 +145,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5.97 μs ± 26 ns per loop (mean ± std. dev. of 7 runs, 100,000 loops each)\n"
+      "6.04 μs ± 43.3 ns per loop (mean ± std. dev. of 7 runs, 100,000 loops each)\n"
      ]
     }
    ],
    "source": [
-    "%timeit fibonacci()"
+    "t = %timeit -o fibonacci()\n",
+    "euler.save_benchmark(2, t)"
    ]
   }
  ],
