--- a/python/problem_003.ipynb
+++ b/python/problem_003.ipynb
@@ -10,18 +10,18 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "6d89e8e7",
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "6ee77be3",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "Sources:\n",
-    "- Prime Generator: https://code.activestate.com/recipes/117119\n",
-    "- Prime Factorization: https://www.cuemath.com/numbers/prime-factorization  "
+    "import euler"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "81c2912c",
    "metadata": {},
    "outputs": [],
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "02c9b941",
    "metadata": {},
    "outputs": [],
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "9d585b52",
    "metadata": {},
    "outputs": [],
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "7d2ebc28",
    "metadata": {},
    "outputs": [
@@ -81,7 +81,7 @@
        "6857"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "98c18397",
    "metadata": {},
    "outputs": [
@@ -100,12 +100,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.4 ms ± 6.85 μs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
+      "1.41 ms ± 27 μs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
      ]
     }
    ],
    "source": [
-    "%timeit max(prime_factorization(600851475143))"
+    "t = %timeit -o max(prime_factorization(600851475143))\n",
+    "euler.save_benchmark(3, t)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6d89e8e7",
+   "metadata": {},
+   "source": [
+    "Sources:\n",
+    "- Prime Generator: https://code.activestate.com/recipes/117119\n",
+    "- Prime Factorization: https://www.cuemath.com/numbers/prime-factorization  "
    ]
   }
  ],
