--- a/python/problem_004.ipynb
+++ b/python/problem_004.ipynb
@@ -12,6 +12,16 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "0fcdc37f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import euler"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "81c2912c",
    "metadata": {},
    "outputs": [],
@@ -30,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "9d585b52",
    "metadata": {},
    "outputs": [],
@@ -40,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "23233c14",
    "metadata": {},
    "outputs": [
@@ -50,7 +60,7 @@
        "906609"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -61,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "7d2ebc28",
    "metadata": {},
    "outputs": [
@@ -69,12 +79,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "122 ms ± 194 μs per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+      "122 ms ± 760 μs per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
    "source": [
-    "%timeit largest_palindrome_product(digits=3)"
+    "t = %timeit -o largest_palindrome_product(digits=3)\n",
+    "euler.save_benchmark(4, t)"
    ]
   }
  ],
