--- a/python/problem_005.ipynb
+++ b/python/problem_005.ipynb
@@ -10,6 +10,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "570ff717",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import euler"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "1cc7e0f8",
    "metadata": {},
@@ -19,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "4a53b3ca",
    "metadata": {},
    "outputs": [],
@@ -33,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "c2b48784",
    "metadata": {},
    "outputs": [
@@ -43,7 +53,7 @@
        "232792560"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -54,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "c7e4c4c9",
    "metadata": {},
    "outputs": [
@@ -62,12 +72,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3min 14s ± 3.21 s per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "3min 13s ± 4.2 s per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
    "source": [
-    "%timeit smallest_multiple_brute_force(n=20)"
+    "t = %timeit -o smallest_multiple_brute_force(n=20)\n",
+    "euler.save_benchmark(5, t)"
    ]
   },
   {
@@ -80,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "e8875591",
    "metadata": {},
    "outputs": [],
@@ -95,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "8716ab1e",
    "metadata": {},
    "outputs": [
@@ -133,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "2a3e52af",
    "metadata": {},
    "outputs": [],
@@ -157,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "5902f55e",
    "metadata": {},
    "outputs": [
@@ -167,7 +178,7 @@
        "232792560"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -178,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "8179bac4",
    "metadata": {},
    "outputs": [
@@ -186,12 +197,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6.82 s ± 14 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "6.8 s ± 27.9 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
    "source": [
-    "%timeit smallest_multiple_fast()"
+    "t = %timeit -o smallest_multiple_fast()\n",
+    "euler.save_benchmark(5, t)"
    ]
   }
  ],
