--- a/python/problem_006.ipynb
+++ b/python/problem_006.ipynb
@@ -12,6 +12,16 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "f46b401c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import euler"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "81c2912c",
    "metadata": {},
    "outputs": [],
@@ -24,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "9d585b52",
    "metadata": {},
    "outputs": [],
@@ -34,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "7d2ebc28",
    "metadata": {},
    "outputs": [
@@ -44,7 +54,7 @@
        "25164150"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -55,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "97e15d2b",
    "metadata": {},
    "outputs": [
@@ -63,12 +73,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3.82 μs ± 10.7 ns per loop (mean ± std. dev. of 7 runs, 100,000 loops each)\n"
+      "3.96 μs ± 75.2 ns per loop (mean ± std. dev. of 7 runs, 100,000 loops each)\n"
      ]
     }
    ],
    "source": [
-    "%timeit sum_square_difference(n=100)"
+    "t = %timeit -o sum_square_difference(n=100)\n",
+    "euler.save_benchmark(6, t)"
    ]
   }
  ],
