--- a/python/problem_007.ipynb
+++ b/python/problem_007.ipynb
@@ -12,6 +12,16 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "46b306d8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import euler"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "81c2912c",
    "metadata": {},
    "outputs": [],
@@ -33,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "02c9b941",
    "metadata": {},
    "outputs": [],
@@ -47,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "8e8fa561",
    "metadata": {},
    "outputs": [],
@@ -57,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "7d2ebc28",
    "metadata": {},
    "outputs": [
@@ -67,7 +77,7 @@
        "104743"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -78,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "0f883624",
    "metadata": {},
    "outputs": [
@@ -86,12 +96,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "23.3 ms ± 46.6 μs per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+      "23.5 ms ± 51.4 μs per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
      ]
     }
    ],
    "source": [
-    "%timeit prime(10001)"
+    "t = %timeit -o prime(10001)\n",
+    "euler.save_benchmark(7, t)"
    ]
   },
   {
