--- a/python/problem_008.ipynb
+++ b/python/problem_008.ipynb
@@ -12,6 +12,16 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "36d77a4a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import euler"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "79869908",
    "metadata": {},
    "outputs": [],
@@ -21,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "881d655c",
    "metadata": {},
    "outputs": [],
@@ -38,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "41d76f14",
    "metadata": {},
    "outputs": [],
@@ -48,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "ae7adbca",
    "metadata": {},
    "outputs": [
@@ -58,7 +68,7 @@
        "23514624000"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -69,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "c2e9f49a",
    "metadata": {},
    "outputs": [
@@ -77,12 +87,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "908 μs ± 826 ns per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n"
+      "923 μs ± 8.67 μs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n"
      ]
     }
    ],
    "source": [
-    "%timeit largest_product(series, 13)"
+    "t = %timeit -o largest_product(series, 13)\n",
+    "euler.save_benchmark(8, t)"
    ]
   }
  ],
