--- a/python/problem_009.ipynb
+++ b/python/problem_009.ipynb
@@ -12,6 +12,16 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "91ad7a42",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import euler"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "e9820fc9",
    "metadata": {},
    "outputs": [],
@@ -26,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "93323ee3",
    "metadata": {},
    "outputs": [
@@ -36,7 +46,7 @@
        "31875000"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -47,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "35801c60",
    "metadata": {},
    "outputs": [
@@ -55,12 +65,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "8.56 s ± 90.5 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "8.57 s ± 26.2 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
    "source": [
-    "%timeit triplet_product(1000)"
+    "t = %timeit -o triplet_product(1000)\n",
+    "euler.save_benchmark(9, t)"
    ]
   }
  ],
