--- a/python/problem_010.ipynb
+++ b/python/problem_010.ipynb
@@ -12,6 +12,16 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "f43d1548",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import euler"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "81c2912c",
    "metadata": {},
    "outputs": [],
@@ -33,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "02c9b941",
    "metadata": {},
    "outputs": [],
@@ -53,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "8e8fa561",
    "metadata": {},
    "outputs": [],
@@ -63,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "7d2ebc28",
    "metadata": {},
    "outputs": [
@@ -73,7 +83,7 @@
        "142913828922"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -84,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "d3850ce8",
    "metadata": {},
    "outputs": [
@@ -92,12 +102,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "536 ms ± 8.28 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "537 ms ± 1.48 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
    "source": [
-    "%timeit summation_of_primes(2_000_000)"
+    "t = %timeit -o summation_of_primes(2_000_000)\n",
+    "euler.save_benchmark(10, t)"
    ]
   },
   {
