--- a/python/problem_011.ipynb
+++ b/python/problem_011.ipynb
@@ -12,6 +12,16 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "574cf3df",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import euler"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "81c2912c",
    "metadata": {},
    "outputs": [],
@@ -42,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "5ac01d4a",
    "metadata": {},
    "outputs": [],
@@ -74,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "9559ef6d",
    "metadata": {},
    "outputs": [],
@@ -109,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "bb826667",
    "metadata": {},
    "outputs": [
@@ -119,7 +129,7 @@
        "70600674"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -130,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "b5fab265",
    "metadata": {},
    "outputs": [
@@ -138,12 +148,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "335 μs ± 2.59 μs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n"
+      "339 μs ± 3.79 μs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n"
      ]
     }
    ],
    "source": [
-    "%timeit greatest_adjacent_numbers(4, get_lines(grid))"
+    "t = %timeit -o greatest_adjacent_numbers(4, get_lines(grid))\n",
+    "euler.save_benchmark(11, t)"
    ]
   }
  ],
