--- a/python/problem_014.ipynb
+++ b/python/problem_014.ipynb
@@ -12,6 +12,16 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "ad7b9b35",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import euler"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "d49e09bd",
    "metadata": {},
    "outputs": [],
@@ -22,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "d16547ce",
    "metadata": {},
    "outputs": [],
@@ -41,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "8ae2547d",
    "metadata": {},
    "outputs": [],
@@ -51,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "33355599",
    "metadata": {},
    "outputs": [],
@@ -65,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "41017f19",
    "metadata": {},
    "outputs": [
@@ -75,7 +85,7 @@
        "837799"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -86,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "1bf309df",
    "metadata": {},
    "outputs": [
@@ -94,12 +104,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "11.8 s ± 32.6 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "12.1 s ± 150 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
    "source": [
-    "%timeit longest_collatz(1_000_000)"
+    "t = %timeit -o longest_collatz(1_000_000)\n",
+    "euler.save_benchmark(14, t)"
    ]
   }
  ],
