--- a/python/problem_016.ipynb
+++ b/python/problem_016.ipynb
@@ -12,6 +12,16 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "b172d58b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import euler"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "8685c48f",
    "metadata": {},
    "outputs": [
@@ -21,7 +31,7 @@
        "1366"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -32,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "72d622de",
    "metadata": {},
    "outputs": [
@@ -40,12 +50,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "20.5 μs ± 57.5 ns per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n"
+      "20.2 μs ± 26.2 ns per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n"
      ]
     }
    ],
    "source": [
-    "%timeit sum([int(s) for s in str(2**1_000)])"
+    "t = %timeit -o sum([int(s) for s in str(2**1_000)])\n",
+    "euler.save_benchmark(16, t)"
    ]
   }
  ],
