--- a/python/problem_018.ipynb
+++ b/python/problem_018.ipynb
@@ -12,6 +12,16 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "ac1fcd73",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import euler"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "ec8705be",
    "metadata": {},
    "outputs": [],
@@ -26,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "9bff21b6",
    "metadata": {},
    "outputs": [],
@@ -36,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "0a075279",
    "metadata": {},
    "outputs": [],
@@ -54,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "421d5d05",
    "metadata": {},
    "outputs": [],
@@ -64,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "6681562d",
    "metadata": {},
    "outputs": [],
@@ -79,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "d04fb8ee",
    "metadata": {},
    "outputs": [
@@ -89,7 +99,7 @@
        "1074"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -100,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "fd4f3ade",
    "metadata": {},
    "outputs": [
@@ -108,12 +118,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "45.3 μs ± 1.7 μs per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n"
+      "44.6 μs ± 317 ns per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n"
      ]
     }
    ],
    "source": [
-    "%timeit maximum_path(get_data(\"../data/0018_triangle.txt\"))"
+    "t = %timeit -o maximum_path(get_data(\"../data/0018_triangle.txt\"))\n",
+    "euler.save_benchmark(18, t)"
    ]
   }
  ],
