--- a/python/problem_019.ipynb
+++ b/python/problem_019.ipynb
@@ -10,6 +10,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "9e799b3e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import euler"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "90d1c4b1",
    "metadata": {},
@@ -19,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "cb6ec1ea",
    "metadata": {},
    "outputs": [],
@@ -30,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "caa08c07",
    "metadata": {},
    "outputs": [],
@@ -55,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "e6b927bb",
    "metadata": {},
    "outputs": [
@@ -65,7 +75,7 @@
        "171"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -76,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "2e84c396",
    "metadata": {},
    "outputs": [
@@ -84,12 +94,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "98.6 μs ± 296 ns per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n"
+      "99.3 μs ± 393 ns per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n"
      ]
     }
    ],
    "source": [
-    "%timeit counting_sundays(1901, 2000)"
+    "t = %timeit -o counting_sundays(1901, 2000)\n",
+    "euler.save_benchmark(19, t)"
    ]
   },
   {
@@ -102,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "ef01d238",
    "metadata": {},
    "outputs": [],
@@ -112,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "c98bb809",
    "metadata": {},
    "outputs": [
@@ -122,7 +133,7 @@
        "171"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -134,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "b4c0ca63",
    "metadata": {},
    "outputs": [
@@ -142,14 +153,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "7.83 ms ± 426 μs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
+      "7.65 ms ± 109 μs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
      ]
     }
    ],
    "source": [
-    "%%timeit\n",
-    "dates = pd.date_range(start=\"1901-01-01\", end=\"2000-12-31\")\n",
-    "sum([1 for (d, dn) in zip(dates.day.values, dates.day_name()) if d == 1 and dn == \"Sunday\"])"
+    "t = %timeit -o sum([1 for (d, dn) in zip(pd.date_range(start=\"1901-01-01\", end=\"2000-12-31\").day.values, pd.date_range(start=\"1901-01-01\", end=\"2000-12-31\").day_name()) if d == 1 and dn == \"Sunday\"])\n",
+    "euler.save_benchmark(19, t)"
    ]
   }
  ],
