--- a/python/problem_021.ipynb
+++ b/python/problem_021.ipynb
@@ -12,6 +12,16 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "bdf4b125",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import euler"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "60fd50bf",
    "metadata": {},
    "outputs": [],
@@ -26,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "e18a2e1c",
    "metadata": {},
    "outputs": [],
@@ -36,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "ac3a76dc",
    "metadata": {},
    "outputs": [],
@@ -53,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "819fd310",
    "metadata": {},
    "outputs": [
@@ -63,7 +73,7 @@
        "31626"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -74,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "71e2073e",
    "metadata": {},
    "outputs": [
@@ -82,12 +92,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.01 s ± 3.5 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "2.02 s ± 1.39 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
    "source": [
-    "%timeit sum(amicables(10_000))"
+    "t = %timeit -o sum(amicables(10_000))\n",
+    "euler.save_benchmark(21, t)"
    ]
   }
  ],
