--- a/python/problem_022.ipynb
+++ b/python/problem_022.ipynb
@@ -17,7 +17,8 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import string"
+    "import string\n",
+    "import euler"
    ]
   },
   {
@@ -28,7 +29,7 @@
    "outputs": [],
    "source": [
     "names = list(pd.read_csv('../data/0022_names.txt').T.index)\n",
-    "names.sort()\n"
+    "names.sort()"
    ]
   },
   {
@@ -96,12 +97,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.27 ms ± 52.8 μs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n"
+      "1.15 ms ± 7.92 μs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n"
      ]
     }
    ],
    "source": [
-    "%timeit sum([(i+1)*(name_value(n)) for (i, n) in enumerate(names)])"
+    "t = %timeit -o sum([(i+1)*(name_value(n)) for (i, n) in enumerate(names)])\n",
+    "euler.save_benchmark(22, t)"
    ]
   }
  ],
