--- a/python/problem_023.ipynb
+++ b/python/problem_023.ipynb
@@ -12,6 +12,16 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "e0aa558c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import euler"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "cf1a7e34",
    "metadata": {},
    "outputs": [],
@@ -30,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "ebc1f6a9",
    "metadata": {},
    "outputs": [],
@@ -45,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "32d1dab9",
    "metadata": {},
    "outputs": [],
@@ -72,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "f902502f",
    "metadata": {},
    "outputs": [
@@ -82,7 +92,7 @@
        "4179871"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -93,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "94635cc8",
    "metadata": {},
    "outputs": [
@@ -101,12 +111,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "18.4 s ± 205 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "18.1 s ± 208 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
    "source": [
-    "%timeit non_abundant_sums(n=28123)"
+    "t = %timeit -o non_abundant_sums(n=28123)\n",
+    "euler.save_benchmark(23, t)"
    ]
   }
  ],
