--- a/python/problem_024.ipynb
+++ b/python/problem_024.ipynb
@@ -16,13 +16,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import itertools"
+    "import itertools\n",
+    "import euler"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
    "id": "9709d045",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def lexicographic_permutations(n):\n",
+    "    permutations = list(itertools.permutations([str(n) for n in range(10)]))\n",
+    "    permutations.sort()\n",
+    "    return int(''.join(permutations[n-1]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "15534468",
    "metadata": {},
    "outputs": [
     {
@@ -31,20 +45,18 @@
        "2783915460"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "permutations = list(itertools.permutations([str(n) for n in range(10)]))\n",
-    "permutations.sort()\n",
-    "int(''.join(permutations[999999]))"
+    "lexicographic_permutations(1_000_000)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "81fe1c88",
    "metadata": {},
    "outputs": [
@@ -52,15 +64,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "326 ms ± 4.87 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "397 ms ± 8.11 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
    "source": [
-    "%%timeit\n",
-    "permutations = list(itertools.permutations([str(n) for n in range(10)]))\n",
-    "permutations.sort()\n",
-    "int(''.join(permutations[999999]))"
+    "t = %timeit -o lexicographic_permutations(1_000_000)\n",
+    "euler.save_benchmark(24, t)"
    ]
   }
  ],
