--- a/python/problem_025.ipynb
+++ b/python/problem_025.ipynb
@@ -12,6 +12,16 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "9abab9c9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import euler"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "723ada8a",
    "metadata": {},
    "outputs": [],
@@ -25,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "99c22dd0",
    "metadata": {},
    "outputs": [],
@@ -43,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "a3515c3c",
    "metadata": {},
    "outputs": [
@@ -53,7 +63,7 @@
        "4782"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -64,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "4b726253",
    "metadata": {},
    "outputs": [
@@ -72,12 +82,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "20.1 ms ± 372 μs per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+      "19.6 ms ± 13.7 μs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
      ]
     }
    ],
    "source": [
-    "%timeit nthdigitfib(1_000)"
+    "t = %timeit -o nthdigitfib(1_000)\n",
+    "euler.save_benchmark(25, t)"
    ]
   }
  ],
