--- a/python/problem_029.ipynb
+++ b/python/problem_029.ipynb
@@ -12,6 +12,16 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "84b45b22",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import euler"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "723ada8a",
    "metadata": {},
    "outputs": [],
@@ -26,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "bdc029a2",
    "metadata": {},
    "outputs": [],
@@ -36,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "9957b42b",
    "metadata": {},
    "outputs": [
@@ -46,7 +56,7 @@
        "9183"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -57,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "49f91135",
    "metadata": {},
    "outputs": [
@@ -65,12 +75,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.43 ms ± 4.73 μs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
+      "2.43 ms ± 10.9 μs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
      ]
     }
    ],
    "source": [
-    "%timeit distinct_power(2, 100)"
+    "t = %timeit -o distinct_power(2, 100)\n",
+    "euler.save_benchmark(29, t)"
    ]
   }
  ],
