--- a/python/problem_030.ipynb
+++ b/python/problem_030.ipynb
@@ -12,6 +12,16 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "39a7985e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import euler"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "bdc029a2",
    "metadata": {},
    "outputs": [],
@@ -30,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "9957b42b",
    "metadata": {},
    "outputs": [],
@@ -40,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "3d8b6936",
    "metadata": {},
    "outputs": [
@@ -50,7 +60,7 @@
        "443839"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -61,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "05162b0c",
    "metadata": {},
    "outputs": [
@@ -69,12 +79,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "7.44 s ± 55.4 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "7.57 s ± 86.1 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
    "source": [
-    "%timeit powers(start=2, end=10_000_000, power=5)"
+    "t = %timeit -o powers(start=2, end=10_000_000, power=5)\n",
+    "euler.save_benchmark(30, t)"
    ]
   }
  ],
