--- a/python/problem_040.ipynb
+++ b/python/problem_040.ipynb
@@ -12,33 +12,42 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "9121639c",
+   "id": "68f3f050",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Setup\n",
-    "length = 10**6 # 1_000_000"
+    "import euler"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "da454cd4",
+   "id": "d485cb56",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Generate number\n",
-    "number = ''\n",
-    "counter = 0\n",
-    "while len(number) < length:\n",
-    "    counter += 1\n",
-    "    number += str(counter)"
+    "def champernowne(n):\n",
+    "    \n",
+    "    # generate number\n",
+    "    number = ''\n",
+    "    counter = 0\n",
+    "    while len(number) < n:\n",
+    "        counter += 1\n",
+    "        number += str(counter)\n",
+    "    \n",
+    "    # product\n",
+    "    product = 1\n",
+    "    for i in [10**x for x in range(7)]:\n",
+    "        product *= int(number[i-1])\n",
+    "    \n",
+    "    # return answer\n",
+    "    return product"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "e1f3544a",
+   "id": "6319e8a6",
    "metadata": {},
    "outputs": [
     {
@@ -53,11 +62,26 @@
     }
    ],
    "source": [
-    "# Answer\n",
-    "product = 1\n",
-    "for i in [10**x for x in range(7)]:\n",
-    "    product *= int(number[i-1])\n",
-    "product"
+    "champernowne(10**6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "7c860257",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "23.2 ms ± 46.2 μs per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "t = %timeit -o champernowne(10**6)\n",
+    "euler.save_benchmark(40, t)"
    ]
   }
  ],
