--- a/python/problem_013.ipynb
+++ b/python/problem_013.ipynb
@@ -12,6 +12,16 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "8353c44d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import euler"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "46e2f241",
    "metadata": {},
    "outputs": [],
@@ -122,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "383081d3",
    "metadata": {},
    "outputs": [
@@ -132,7 +142,7 @@
        "5537376230"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -143,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "45137828",
    "metadata": {},
    "outputs": [
@@ -151,12 +161,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.85 μs ± 10.5 ns per loop (mean ± std. dev. of 7 runs, 1,000,000 loops each)\n"
+      "1.83 μs ± 6.77 ns per loop (mean ± std. dev. of 7 runs, 1,000,000 loops each)\n"
      ]
     }
    ],
    "source": [
-    "%timeit int(str(sum(nums))[:10])"
+    "t = %timeit -o int(str(sum(nums))[:10])\n",
+    "euler.save_benchmark(13, t)"
    ]
   }
  ],
