--- a/python/problem_017.ipynb
+++ b/python/problem_017.ipynb
@@ -12,6 +12,16 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "e4d02396",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import euler"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "197bc878",
    "metadata": {},
    "outputs": [],
@@ -51,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "405fe05c",
    "metadata": {},
    "outputs": [],
@@ -67,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "188bfa0a",
    "metadata": {},
    "outputs": [],
@@ -90,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "e9ae0094",
    "metadata": {},
    "outputs": [],
@@ -108,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "befc52c2",
    "metadata": {},
    "outputs": [],
@@ -126,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "a4457d13",
    "metadata": {},
    "outputs": [],
@@ -158,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "147edd5d",
    "metadata": {},
    "outputs": [],
@@ -174,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "c9c4aee5",
    "metadata": {},
    "outputs": [
@@ -184,7 +194,7 @@
        "21124"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "109f4dd9",
    "metadata": {},
    "outputs": [
@@ -203,12 +213,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.62 ms ± 16 μs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n"
+      "1.63 ms ± 4.69 μs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n"
      ]
     }
    ],
    "source": [
-    "%timeit letter_counts(number_letter_counts(1000))"
+    "t = %timeit -o letter_counts(number_letter_counts(1000))\n",
+    "euler.save_benchmark(17, t)"
    ]
   }
  ],
