--- a/python/problem_020.ipynb
+++ b/python/problem_020.ipynb
@@ -12,6 +12,16 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "537ef396",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import euler"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "60fd50bf",
    "metadata": {},
    "outputs": [],
@@ -25,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "ac3a76dc",
    "metadata": {},
    "outputs": [],
@@ -36,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "819fd310",
    "metadata": {},
    "outputs": [
@@ -46,7 +56,7 @@
        "648"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -57,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "86a8039f",
    "metadata": {},
    "outputs": [
@@ -65,12 +75,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "14.1 μs ± 253 ns per loop (mean ± std. dev. of 7 runs, 100,000 loops each)\n"
+      "14 μs ± 42.5 ns per loop (mean ± std. dev. of 7 runs, 100,000 loops each)\n"
      ]
     }
    ],
    "source": [
-    "%timeit digit_sum(fac(100))"
+    "t = %timeit -o digit_sum(fac(100))\n",
+    "euler.save_benchmark(20, t)"
    ]
   }
  ],
