--- a/python/problem_034.ipynb
+++ b/python/problem_034.ipynb
@@ -12,11 +12,20 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "0ed3f181",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import euler"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "b658c7d3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Factorial\n",
     "def factorial(n):\n",
     "    fac = 1\n",
     "    for i in range(1, n+1):\n",
@@ -26,34 +35,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "328c49e0",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Test run\n",
-    "factorial(5) == 1 * 2 * 3 * 4 * 5"
+    "assert factorial(5) == 1 * 2 * 3 * 4 * 5"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "54982c72",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Digit Factorials\n",
     "def digit_factorials(numbers):\n",
     "    results = []\n",
     "    for x in numbers:\n",
@@ -69,29 +65,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "ca799368",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Test run\n",
-    "sum(digit_factorials([145])) == 145"
+    "assert sum(digit_factorials([145])) == 145"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "49ae927c",
    "metadata": {},
    "outputs": [
@@ -101,15 +85,32 @@
        "40730"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Answer\n",
-    "numbers = range(3, 1_000_000)\n",
-    "sum(digit_factorials(numbers))"
+    "sum(digit_factorials(range(3, 1_000_000)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "13c232ba",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.52 s ± 62.4 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "t = %timeit -o sum(digit_factorials(range(3, 1_000_000)))\n",
+    "euler.save_benchmark(34, t)"
    ]
   }
  ],
