--- a/python/problem_036.ipynb
+++ b/python/problem_036.ipynb
@@ -12,6 +12,16 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "9cf46734",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import euler"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "22316a62",
    "metadata": {},
    "outputs": [
@@ -21,14 +31,32 @@
        "872187"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Answer\n",
     "sum([i for i in range(1_000_000) if str(i)==str(i)[::-1] and bin(i)[2:]==bin(i)[2:][::-1]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "b5f75e40",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "163 ms ± 5.07 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "t = %timeit -o sum([i for i in range(1_000_000) if str(i)==str(i)[::-1] and bin(i)[2:]==bin(i)[2:][::-1]])\n",
+    "euler.save_benchmark(36, t)"
    ]
   }
  ],
